# tft_champion_app

./: README.md  pyproject.toml  requirements.txt
src/: config.py  main.py
src/db/: connection.py  schema.py
src/repository/: champion_repository.py  champion_trait_repository.py  trait_repository.py
src/service/: champion_service.py  data_dragon_service.py  tft_api_client.py  tft_data_utils.py
src/ui/: __init__.py  champion_card.py  constants.py  sections.py  tft_app.py
