[project]
name = "tft-champion-app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.85.1"
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.1",
    "flet-desktop>=0.85.1",
    "flet-web>=0.85.1",
]

[tool.flet]
org = "com.mycompany"
product = "tft-champion-app"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
